# cluster-operator

./: .gitignore  Dockerfile  README.md  config  go.mod  go.sum  helm.yaml  makefile  test
.github/workflows/: pr.yaml
charts/cluster-operator/crds/: cluster-operator.infobloxopen.github.com_clusters_crd.yaml
charts/cluster-operator/templates/: _helpers.tpl  ingress.yaml  operator.yaml  role.yaml  service.yaml
cmd/manager/: config.go  main.go  main_test.go
deploy/: Dockerfile  cluster.yaml.in  role.yaml  role_binding.yaml  service_account.yaml  test.yaml
deploy/cluster-operator/: values.yaml
deploy/cluster-operator/crds/: cluster-operator.infobloxopen.github.com_clusters_crd.yaml  cluster-operator.seizadi.github.com_clusters_crd.yaml
deploy/cluster-operator/templates/: NOTES.txt  admission-registration.yaml  certs.yaml  crds.yaml  deployment.yaml  operator.yaml  role.yaml  role_binding.yaml  service.yaml  service_account.yaml  space.yaml  webhook-config.yaml
deploy/crds/: cluster-operator.seizadi.github.com_clusters_crd.yaml  cluster-operator.seizadi.github.com_v1alpha1_cluster_cr.yaml
docker/kops/: Dockerfile  Makefile
kops/: cluster_aux.go  create_cluster.go  delete_cluster.go  export_kubecfg.go  kops.go  kops_test.go  replace_cluster.go  rolling_update_cluster.go  root.go  update_cluster.go  validate_cluster.go
kops/upup/models/: BUILD.bazel  bindata.go
kops/upup/pkg/fi/cloudup/cloudformation/: BUILD.bazel  target.go
kops/upup/pkg/fi/cloudup/dnstasks/: BUILD.bazel  dnszone.go
kops/upup/pkg/fi/cloudup/do/: BUILD.bazel  api_target.go  cloud.go
kops/upup/pkg/fi/nodeup/local/: BUILD.bazel  local_target.go
pkg/apis/: addtoscheme_clusteroperator_v1alpha1.go
pkg/apis/clusteroperator/: group.go
pkg/clustervalidator/: clusteradmission.go  webhook.go  webhook_test.go
pkg/controller/: add_cluster.go  controller.go
pkg/controller/cluster/: cluster_controller.go  (+1 more)
ssh/: kops.pub
utils/: cmd.go  cmd_test.go  envs.go  envs_test.go
(+301 files in other folders)
