load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "literal.go",
        "target.go",
    ],
    importpath = "github.com/infobloxopen/cluster-operator/kops/upup/pkg/fi/cloudup/cloudformation",
    visibility = ["//visibility:public"],
    deps = [
        "//upup/pkg/fi:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
    ],
)
