load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["dnszone.go"],
    importpath = "github.com/infobloxopen/cluster-operator/kops/upup/pkg/fi/cloudup/dnstasks",
    visibility = ["//visibility:public"],
    deps = [
        "//dnsprovider/pkg/dnsprovider:go_default_library",
        "//upup/pkg/fi:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
    ],
)
