load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api_target.go",
        "cloud.go",
    ],
    importpath = "github.com/infobloxopen/cluster-operator/kops/upup/pkg/fi/cloudup/do",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/resources/digitalocean:go_default_library",
        "//upup/pkg/fi:go_default_library",
    ],
)
